force-app/main/default/objects/Services_Scrum_Snapshot__c/Services_Scrum_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Services Scrum - Snapshot</label>
    <nameField>
        <displayFormat>SCR-{0000000}</displayFormat>
        <label>Services Scrum - Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Scrum - Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>