force-app/main/default/objects/Services_Scrum_Snapshot__c/fields/Comp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Comp_Amount__c</fullName>
    <label>Comp Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>