force-app/main/default/objects/Services_Scrum_Snapshot__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Salesforce.com Change Request: NICC-020657</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>