force-app/main/default/objects/Services_Scrum_Snapshot__c/fields/Reimbursable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Reimbursable_Expenses__c</fullName>
    <label>Reimbursable Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>