force-app/main/default/objects/Services_Scrum_Snapshot__c/fields/Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Hours__c</fullName>
    <label>Scheduled Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>