force-app/main/default/objects/Services_Scrum_Snapshot__c/fields/Service_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Group__c</fullName>
    <description>1/6/2017 - Changed Field Label from &quot;Service Group&quot; to &quot;Practice per Salesforce.com Change Request: NICC-020657</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Practice</label>
    <length>40</length>
    <type>Text</type>
</CustomField>