force-app/main/default/objects/Services_Scrum_Snapshot__c/fields/Stale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stale_Amount__c</fullName>
    <description>NICC-045436</description>
    <inlineHelpText>Sum of Approved Stale Services</inlineHelpText>
    <label>Stale Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>