force-app/main/default/objects/Services_Scrum_Snapshot__c/fields/Target_Period__c.field-meta.xml
<CustomField>
    <fullName>Target_Period__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>