force-app/main/default/objects/Services_Scrum_Snapshot__c/fields/Tentative_Value__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Value__c</fullName>
    <label>Tentative Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>