force-app/main/default/objects/Services_Scrum_Snapshot__c/fields/Upside_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upside_Amount__c</fullName>
    <label>Upside Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>