force-app/main/default/objects/Services_Scrum_Snapshot__c/listViews/P_2022_Services_Scrum_Records.listView-meta.xml
<ListView>
    <fullName>P_2022_Services_Scrum_Records</fullName>
    <columns>NAME</columns>
    <columns>Actual_Amount__c</columns>
    <columns>Backlog_Amount__c</columns>
    <columns>Region_Name__c</columns>
    <columns>Target_Period__c</columns>
    <columns>Date_of_Pull__c</columns>
    <columns>Service_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Target_Period__c</field>
        <operation>contains</operation>
        <value>2022-</value>
    </filters>
    <label>P - 2022 Services Scrum Records</label>
</ListView>