force-app/main/default/objects/Services_Scrum_Snapshot__c/listViews/Services_Scrum.listView-meta.xml
<ListView>
    <fullName>Services_Scrum</fullName>
    <columns>NAME</columns>
    <columns>Actual_Amount__c</columns>
    <columns>Backlog_Amount__c</columns>
    <columns>Region_Name__c</columns>
    <columns>Target_Period__c</columns>
    <columns>Service_Group__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Services Scrum</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>